# opendal-wasmedge-demo

./: Cargo.toml  README.md  opendal.toml
src/: main.rs
wasm/: Cargo.toml
wasm/src/: main.rs
