[package]
name = "opendal-wasmedge-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opendal = { version = "0.44.0",features = ["services-postgresql", "services-mysql"]}
toml = "0.8.8"
wasmedge-sdk = { version = "0.13.0"  , features = ["async"]}
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.35.1", features = ["full"]}
url-parse="1.0.7"
once_cell="1.9.0"