[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# core_affinity = "0.8.0"
# opendal={path = "../opendal/core", default-features = false, features = ["services-gdrive"]}
# tokio = { version = "1.12.0", features = ["full"] }

# [features]
# services-gdrive = ["opendal/services-gdrive"]